--- a/kontakt.html
+++ b/kontakt.html
@@ -23,7 +23,7 @@
       <td></td>
       <td align="center">
         <h1>Marjan Matjaz</h1>
-        <h2>To je moja stran</h2>
+        <h2>To je moja spletna stran</h2>
         <a href="index.html">domov</a>
         <a href="galerija.html">galerija</a>
         <a href="kontakt.html">kontakt</a>
